[gd_scene load_steps=13 format=2]

[ext_resource path="res://Game Over/GameOver.gd" type="Script" id=1]
[ext_resource path="res://Art/Symbols/2-color.png" type="Texture" id=2]
[ext_resource path="res://Art/Symbols/1-color.png" type="Texture" id=3]
[ext_resource path="res://Art/Symbols/3-color.png" type="Texture" id=4]
[ext_resource path="res://Art/Symbols/4-color.png" type="Texture" id=5]
[ext_resource path="res://Main Menu/Hand-cursor.png" type="Texture" id=6]

[sub_resource type="DynamicFontData" id=5]

hinting = 2
font_path = "res://Main Menu/Fonts/MyriadPro-Bold.otf"

[sub_resource type="DynamicFont" id=6]

size = 100
use_mipmaps = false
use_filter = false
font_data = SubResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFontData" id=3]

hinting = 2
font_path = "res://Main Menu/Fonts/Myriad Pro Light Italic.otf"

[sub_resource type="DynamicFont" id=4]

size = 100
use_mipmaps = false
use_filter = false
font_data = SubResource( 3 )
_sections_unfolded = [ "Extra Spacing", "Font", "Settings" ]

[sub_resource type="DynamicFontData" id=1]

hinting = 2
font_path = "res://Main Menu/Fonts/Myriad Pro Light Italic.otf"

[sub_resource type="DynamicFont" id=2]

size = 100
use_mipmaps = false
use_filter = false
font_data = SubResource( 1 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="GameOver" type="CanvasLayer" index="0"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 1 )

[node name="NinePatchRect" type="NinePatchRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 538.0
margin_top = 421.0
margin_right = 828.0
margin_bottom = 521.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Anchor", "Margin", "Rect" ]

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect" index="1"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 297.0
margin_top = 226.0
margin_right = 753.0
margin_bottom = 326.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="Continue" type="Label" parent="NinePatchRect/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 456.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 6 )
text = "Continue?"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="Love" type="NinePatchRect" parent="NinePatchRect" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 202.0
margin_top = 39.0
margin_right = 413.0
margin_bottom = 167.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )

[node name="Spirit" type="NinePatchRect" parent="NinePatchRect" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 477.0
margin_top = 42.0
margin_right = 704.0
margin_bottom = 156.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )

[node name="FriendShip" type="NinePatchRect" parent="NinePatchRect" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 292.0
margin_top = 58.0
margin_right = 541.0
margin_bottom = 179.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )

[node name="Family" type="NinePatchRect" parent="NinePatchRect" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 606.0
margin_top = 47.0
margin_right = 848.0
margin_bottom = 168.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 5 )

[node name="HandCursor" type="TextureRect" parent="NinePatchRect" index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 110.0
margin_top = 377.0
margin_right = 265.0
margin_bottom = 468.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 6 )
stretch_mode = 0

[node name="Timer" type="Timer" parent="NinePatchRect" index="7"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="Yes" type="Label" parent="NinePatchRect" index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 252.0
margin_top = 376.0
margin_right = 377.0
margin_bottom = 476.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 4 )
text = "Yes"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Material", "Mouse", "custom_colors", "custom_fonts" ]

[node name="No" type="Label" parent="NinePatchRect" index="9"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 742.0
margin_top = 373.0
margin_right = 853.0
margin_bottom = 473.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
text = "No"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Mouse", "Visibility", "custom_fonts" ]

[node name="PositionYes" type="Control" parent="NinePatchRect" index="10"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 99.0
margin_top = 380.0
margin_right = 152.0
margin_bottom = 422.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="PositionNo" type="Control" parent="NinePatchRect" index="11"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 597.0
margin_top = 379.0
margin_right = 625.0
margin_bottom = 407.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[connection signal="timeout" from="NinePatchRect/Timer" to="." method="_on_Timer_timeout"]

[connection signal="mouse_entered" from="NinePatchRect/Yes" to="." method="_on_Yes_mouse_entered"]

[connection signal="mouse_entered" from="NinePatchRect/No" to="." method="_on_No_mouse_entered"]


